Fix errors contrast

--- a/css/style.css
+++ b/css/style.css
@@ -185,7 +185,7 @@ footer a:focus  { color:#f5a666; }
   height: 40px;
 }
 .actions input[type="submit"] {
-  background-color: #0056B3;
+  background-color: #00408F;
   color: #fff;
 }
 .actions input[type="submit"]:hover {
